--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ env-manager (0.1) testing; urgency=medium
 
   * Initial release.
 
-  -- lalalala256 Sat, 3 Apr 2021 18:50:00 +0800
+  -- lalalala256 <jtwang256@163.com>  Sat, 3 Apr 2021 18:50:00 +0800
